Adição do header do Sobre (desktop e responsivo)
Também fiz :
- A linkagem entre a Home e o Sobre;
- Aumentei a espessura e o espaçamento entre a palavra e o underline.

--- a/index.html
+++ b/index.html
@@ -14,6 +14,7 @@
 
     <!-- Link's -->
     <link rel="stylesheet" href="CSS/index.css">
+    <link rel="stylesheet" href="PAGES/sobre.html">
     <script src="JS/script.js" defer></script>
 </head>
 <body>
@@ -25,9 +26,9 @@
         <button class="hamburguer"></button>
 
         <ul class="nav-list">
-            <li><a href="sobre.html" class="roxo nav-select">Inicio</a></li>
-            <li><a href="serviços.html" class="roxo">Sobre Nós</a></li>
-            <li><a href="eventos.html" class="roxo">Serviços</a></li>
+            <li><a href="index.html" class="roxo nav-select">Inicio</a></li>
+            <li><a href="PAGES/sobre.html" class="roxo">Sobre Nós</a></li>
+            <li><a href="#" class="roxo">Serviços</a></li>
             <li><a href="https://api.whatsapp.com/send?phone=5511956647945&text=Ol%C3%A1,%20gostaria%20de%20solicitar%20um%20or%C3%A7amento!" target="_blank" class="nav-orç">Solicitar Orçamento</a></li>
         </ul>
     </nav>
