Adição da Main na Sobre
Também fiz:
- Coloquei as fontes em variáveis no base.css.

--- a/PAGES/sobre.html
+++ b/PAGES/sobre.html
@@ -1,5 +1,5 @@
 <!DOCTYPE html>
-<html lang="en">
+<html lang="pt-br">
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
@@ -13,7 +13,10 @@
     <meta property="og:site_name" content="Dally Dally Eventos"/>
 
     <!-- Link's -->
+    <!-- CSS -->
     <link rel="stylesheet" href="../CSS/index.css">
+    <link rel="stylesheet" href="../CSS/sobre.css">
+    <!-- JS -->
     <script src="../JS/script.js" defer></script>
 </head>
 <body>
@@ -33,6 +36,34 @@
             <li><a href="https://api.whatsapp.com/send?phone=5511956647945&text=Ol%C3%A1,%20gostaria%20de%20solicitar%20um%20or%C3%A7amento!" target="_blank" class="nav-orç">Solicitar Orçamento</a></li>
         </ul>
     </nav>
+
+    <!-- Main -->>
+    <main>
+        <section class="container-center">
+            <!-- Título + Sobre + Dados -->
+            <div class="content-infor">
+                <h1 class="content-h1">Sobre a Prevent Elevadores</h1>
+
+                <p class="content-p">Conheça a Prevent Elevadores, seu ponto de referência em atacado de elevadores. Nosso foco é proporcionar informações sobre nossos produtos e fortalecer a presença da nossa marca no mercado.</p>
+
+                <div class="container-dados">
+                    <div class="content-dados">
+                        <h2>1500+</h2>
+                        <p>Clientes</p>
+                    </div>
     
+                    <div class="content-dados">
+                        <h2>10+</h2>
+                        <p>Anos de Garantia</p>
+                    </div>
+                </div>
+                
+            </div>
+
+            <!-- Imagem -->
+            <img src="../IMG/imgSOBRE/Sobre-Elevador.jpeg" alt="#">
+        </section>
+    </main>    
+
 </body>
 </html>
