Adição do footer no Sobre
Também fiz:
- Criei a pasta pra guardar icon;
- Adicionei mais uma cor no root do base.css;
- Alterei o nome dos arquivos img para ter um padrão.

--- a/index.html
+++ b/index.html
@@ -21,7 +21,7 @@
     
     <!-- Navbar -->
     <nav class="nav">
-        <a href="index.html" class="logo"><img src="IMG/LOGO Prevent (1).png" alt="Logo Prevent Elevadores"></a>
+        <a href="index.html" class="logo"><img src="IMG/LOGO-PreventHorizontal.png" alt="Logo Prevent Elevadores"></a>
 
         <button class="hamburguer"></button>
 
