Adição do header de Serviços (desktop e responsivo)

--- a/PAGES/sobre.html
+++ b/PAGES/sobre.html
@@ -14,7 +14,7 @@
 
     <!-- Link's -->
     <!-- CSS -->
-    <link rel="stylesheet" href="../CSS/index.css">
+    <link rel="stylesheet" href="../CSS/base.css">
     <link rel="stylesheet" href="../CSS/sobre.css">
     <!-- JS -->
     <script src="../JS/script.js" defer></script>
@@ -34,12 +34,12 @@
         <ul class="nav-list">
             <li><a href="../index.html" class="roxo">Inicio</a></li>
             <li><a href="sobre.html" class="roxo nav-select">Sobre Nós</a></li>
-            <li><a href="#" class="roxo">Serviços</a></li>
+            <li><a href="servicos.html" class="roxo">Serviços</a></li>
             <li><a href="https://api.whatsapp.com/send?phone=5511956647945&text=Ol%C3%A1,%20gostaria%20de%20solicitar%20um%20or%C3%A7amento!" target="_blank" class="nav-orç">Solicitar Orçamento</a></li>
         </ul>
     </nav>
 
-    <!-- Main -->>
+    <!-- Main -->
     <main>
         <section class="container-center">
             <!-- Título + Sobre + Dados -->
