--- a/index.html
+++ b/index.html
@@ -28,7 +28,7 @@
         <ul class="nav-list">
             <li><a href="index.html" class="roxo nav-select">Inicio</a></li>
             <li><a href="PAGES/sobre.html" class="roxo">Sobre Nós</a></li>
-            <li><a href="#" class="roxo">Serviços</a></li>
+            <li><a href="PAGES/servicos.html" class="roxo">Serviços</a></li>
             <li><a href="https://api.whatsapp.com/send?phone=5511956647945&text=Ol%C3%A1,%20gostaria%20de%20solicitar%20um%20or%C3%A7amento!" target="_blank" class="nav-orç">Solicitar Orçamento</a></li>
         </ul>
     </nav>
