Adição da main de Serviços - Empreendimentos
Também fiz:
- Adicionei o link do facebook da Prevent no footer do Sobre.

--- a/PAGES/sobre.html
+++ b/PAGES/sobre.html
@@ -126,11 +126,17 @@
          <section class="parteDeBaixo">
             <p>Desenvolvido pela <a href="https://www.instagram.com/cv.criatividadevirtual/" target="_blank">@cv.criatividadevirtual</a></p>
 
+            <!-- Ícones do Instagram e do Facebook -->
             <div>
+                <!-- Icon - Instagram -->
                 <a href="https://www.instagram.com/preventelevadores/" target="_blank">
                     <i class="bi bi-instagram"></i>
                 </a>
-                <i class="bi bi-facebook"></i>
+
+                <!-- Icon - Facebook -->
+                <a href="https://www.facebook.com/share/15EYWt2JFp/" target="_blank">
+                    <i class="bi bi-facebook"></i>
+                </a>
             </div>
          </section>
     </footer>
