Adição da main de Serviços - Manutenção
Obs: Talvez seja necessário alterar as img de Manuntenção.

--- a/PAGES/servicos.html
+++ b/PAGES/servicos.html
@@ -171,7 +171,7 @@
         <section class="servicos">
             <h1>Empreendimentos</h1>
 
-            <!-- Div que engloba os serviços de Residenciais -->
+            <!-- Div que engloba os serviços de Empreendimentos -->
             <div>
                 <!-- Card - Monta Carga 1 -->
                 <div class="card">
@@ -294,15 +294,58 @@
             <div class="buttons-inicio">
                 <a href="https://api.whatsapp.com/send?phone=5511956647945&text=Ol%C3%A1,%20gostaria%20de%20solicitar%20um%20or%C3%A7amento!" target="_blank"><button>Solicitar Orçamento</button></a>
             </div>
-
-            <div class="servicos-container"></div>
         </section>
 
         <!-- Manutenção -->
         <section class="servicos">
-            <h1></h1>
+            <h1>Manutenção</h1>
 
-            <div class="servicos-container"></div>
+            <!-- Div que engloba os serviços de Manutenção -->
+            <div>
+                <!-- Card - Modernização de Elevadores -->
+                <div class="card">
+                    <!-- Div para englobar a img e o texto oculto -->
+                    <div class="card-divImg">
+                        <img src="../IMG/imgSERVICOS/ModernizacaoDeElevadores1.jpeg" class="card-img" alt="Monta Carga">
+    
+                        <!-- Texto que só irá aparecer se passar o cursor do mouse por cima da img -->
+                        <p class="img-textoHover">A modernização de elevadores melhora desempenho, segurança e estética, trazendo tecnologia e eficiência.</p>
+                    </div>
+
+                    <!-- Informações do card -->
+                    <div class="card-divInfo">
+                        <!-- Nome do serviço -->
+                        <h2 class="card-tituloMenor">Modernização de Elevadores</h2>
+
+                        <!-- Linha divisória do serviço -->
+                        <div class="card-linhaDivisoria"></div>
+                    </div>
+                </div>
+
+                <!-- Card - Reparo de Elevadores -->
+                <div class="card">
+                    <!-- Div para englobar a img e o texto oculto -->
+                    <div class="card-divImg">
+                        <img src="../IMG/imgSERVICOS/ReparoDeElevador1.webp" class="card-img" alt="Monta Carga">
+    
+                        <!-- Texto que só irá aparecer se passar o cursor do mouse por cima da img -->
+                        <p class="img-textoHover">O reparo de elevadores corrige falhas e garante o funcionamento seguro e eficiente do equipamento.</p>
+                    </div>
+
+                    <!-- Informações do card -->
+                    <div class="card-divInfo">
+                        <!-- Nome do serviço -->
+                        <h2 class="card-tituloMenor">Reparo de elevadores</h2>
+
+                        <!-- Linha divisória do serviço -->
+                        <div class="card-linhaDivisoria"></div>
+                    </div>
+                </div>
+            </div>
+
+            <div class="buttons-inicio">
+                <a href="https://api.whatsapp.com/send?phone=5511956647945&text=Ol%C3%A1,%20gostaria%20de%20solicitar%20um%20or%C3%A7amento!" target="_blank"><button>Solicitar Orçamento</button></a>
+            </div>
         </section>
      </main>
 
