--- a/index.html
+++ b/index.html
@@ -50,7 +50,7 @@
     <!-- Frase 3C 3S -->
     <section class="frase3">
         <div class="frase3-img">
-            <img src="IMG/LOGO Prevent V.png" alt="Logo Prevent Elevore ">
+            <img src="IMG/LOGO-PreventVertical.png" alt="Logo Prevent Elevore ">
         </div>
 
         <div class="frase3-text">
@@ -71,7 +71,7 @@
         </div>
 
         <div class="sobre-img">
-            <img src="IMG/LOGO Prevent S.png" alt="Logo Prevent Elevadores">
+            <img src="IMG/LOGO-PreventCircular.png" alt="Logo Prevent Elevadores">
         </div>
     </section>
 
@@ -141,7 +141,7 @@
         
         <div class="container-serviços">
             <div class="container-item-serviço">
-                <img src="IMG/PlataformaHidraulicaClassic.jpeg" alt="Plataforma Hidraulica Classic">
+                <img src="IMG/imgSERVICOS/PlatHidraulica-Classic.jpeg" alt="Plataforma Hidraulica Classic">
 
                 <div class="container-item-serviço-text">
                     <h1>Plataforma Hidraulica</h1>
@@ -150,7 +150,7 @@
             </div>
 
             <div class="container-item-serviço">
-                <img src="IMG/PlataformaHidraulicaClassic.jpeg" alt="Plataforma Hidraulica Classic">
+                <img src="IMG/imgSERVICOS/MontaCargas1.jpeg" alt="Monta Carga">
 
                 <div class="container-item-serviço-text">
                     <h1>Monta Carga</h1>
@@ -158,7 +158,7 @@
             </div>
 
             <div class="container-item-serviço">
-                <img src="IMG/PlataformaHidraulicaClassic.jpeg" alt="Plataforma Hidraulica Classic">
+                <img src="IMG/imgSERVICOS/PlatHidraulica-Modern.jpeg" alt="Plataforma Hidraulica Meia Cabine Modern">
 
                 <div class="container-item-serviço-text">
                     <h1>Plataforma de Acessibilidade</h1>
@@ -251,35 +251,49 @@
     <!-- Fim Depoimentos -->
 
     <!-- Fale Conosco! -->
-    <section>
-        <div>
+    <section class="contato">
+        <div class="contato-text">
             <h1>Fale Conosco!</h1>
-            <p>Preencha o formulário e descubra como a Prevent Elevadores pode transformar seu projeto com soluções inovadoras e seguras. <br><br>
+            <p><span>Preencha</span> o <span>formulário</span> e descubra como a Prevent Elevadores pode transformar seu projeto com soluções inovadoras e seguras. <br><br>
 
-            Solicite seu orçamento agora mesmo!</p>
+            <span>Solicite</span> seu <span>orçamento</span> agora mesmo!</p>
         </div>
 
-        <div>
+        <div class="formulario">
             <form action="">
-                <label for="">Seu nome completo*</label>
-                <input type="text" name="nome" id="nome" placeholder="Digite seu nome aqui">
+                <div class="formulario-input">
+                    <label for="">Seu nome completo*</label>
+                    <input type="text" id="nome" placeholder="Digite seu nome aqui">
+                </div>
 
-                <label for="">Seu email*</label>
-                <input type="text" name="nome" id="nome" placeholder="Digite seu email aqui">
+                <div class="formulario-input">
+                    <label for="">Seu email*</label>
+                    <input type="text" id="email" placeholder="Digite seu email aqui">
+                </div>
 
-                <label for="">Seu telefone*</label>
-                <input type="text" name="nome" id="nome" placeholder="Digite seu telefone aqui">
+                <div class="formulario-input">
+                    <label for="">Seu telefone*</label>
+                    <input type="text" id="telefone" placeholder="Digite seu telefone aqui">
+                </div>
 
-                <label for="">Empresa</label>
-                <input type="text" name="nome" id="nome" placeholder="Digite a empresa aqui">
+                <div class="formulario-input">
+                    <label for="">Empresa</label>
+                    <input type="text" id="empresa" placeholder="Digite a empresa aqui">
+                </div>
+                
+                <div class="formulario-input">
+                    <label for="">Equipamento que tem interesse</label>
+                    <input type="text" id="equipamento" placeholder="Digite o equipamento aqui">
+                </div>
 
-                <label for="">Equipamento que tem interesse</label>
-                <input type="text" name="nome" id="nome" placeholder="Digite o equipamento aqui">
+                <div class="formulario-input">
+                    <label for="">Cidade </label>
+                    <input type="text" id="cidade" placeholder="Digite a cidade aqui">
+                </div>
 
-                <label for="">Cidade </label>
-                <input type="text" name="nome" id="nome" placeholder="Digite a cidade aqui">
-
-                <a href=""><button>Enviar</button></a>
+                <div class="form-button">
+                    <a href=""><button onclick="enviarParaWhatsApp()">Enviar</button></a>
+                </div>
             </form>
         </div>
     </section>
