Adição da responsividade da Main na Sobre

--- a/PAGES/sobre.html
+++ b/PAGES/sobre.html
@@ -41,21 +41,31 @@
 
     <!-- Main -->
     <main>
+        <!-- Container que engloba os textos e a img-->
         <section class="container-center">
             <!-- Título + Sobre + Dados -->
-            <div class="content-infor">
+            <div>
+                <!-- Título do Sobre -->
                 <h1 class="content-h1">Sobre a Prevent Elevadores</h1>
 
+                <!-- Texto sobre Prevent -->
                 <p class="content-p">Conheça a Prevent Elevadores, seu ponto de referência em atacado de elevadores. Nosso foco é proporcionar informações sobre nossos produtos e fortalecer a presença da nossa marca no mercado.</p>
 
+                <!-- Envolve os dados Clientes e Anos de Garantia -->
                 <div class="container-dados">
+                    <!-- Dado sobre clientes -->
                     <div class="content-dados">
+                        <!-- Número do dado de Clientes e Anos de Garantia-->
                         <h2>1500+</h2>
+                        <!-- Nome que se refere o dado de Clientes e Anos de Garantia -->
                         <p>Clientes</p>
                     </div>
     
+                    <!-- Dado sobre anos de garantia -->
                     <div class="content-dados">
+                        <!-- Número do dado de Clientes e Anos de Garantia-->
                         <h2>10+</h2>
+                        <!-- Título do dado de Clientes e Anos de Garantia -->
                         <p>Anos de Garantia</p>
                     </div>
                 </div>
