--- a/PAGES/servicos.html
+++ b/PAGES/servicos.html
@@ -18,6 +18,7 @@
     <link rel="stylesheet" href="../CSS/servicos.css">
     <!-- JS -->
     <script src="../JS/script.js" defer></script>
+    <script src="../JS/servicosCarrossel.js" defer></script>
     <!-- Bootstrap -->
     <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.11.3/font/bootstrap-icons.min.css">
 </head>
@@ -42,12 +43,14 @@
     <!-- Main -->
     <main>
         <!-- Residenciais -->
+        <!-- Container que engloba título + carrossel/cards + botão Solicitar Orçamento -->
         <section class="servicos">
-            <!-- Título da section do serviço -->
+            <!-- Título da section -->
             <h1>Residenciais</h1>
 
+            <!-- Começo do Carrossel -->
             <!-- Div que engloba os serviços de Residenciais -->
-            <div>
+            <div class="carrossel" id="contentSlide">
                 <!-- Card - Plat Hidráulica (Classic) -->
                 <div class="card">
                     <!-- Div para englobar a img e o texto oculto -->
@@ -164,17 +167,33 @@
                 </div>                
             </div>
 
+            <!-- Container do botões do Carrossel -->
+            <div class="carrossel-botoes">
+                <!-- Botão esquerdo do carrossel -->
+                <i class="bi bi-arrow-left-square btn-carrossel" onclick="direcaoServicos(1)"></i>
+
+                <!-- Linha divisória dos botões do carrossel -->
+                <div class="carrossel-botoesLinhaDivisoria"></div>
+
+                <!-- Botão direito do carrossel -->
+                <i class="bi bi-arrow-right-square btn-carrossel" onclick="direcaoServicos(2)"></i>
+            </div>
+            <!-- Fim do Carrossel -->
+
+            <!-- Botão Solicitar Orçamento -->
             <div class="buttons-inicio">
                 <a href="https://api.whatsapp.com/send?phone=5511956647945&text=Ol%C3%A1,%20gostaria%20de%20solicitar%20um%20or%C3%A7amento!" target="_blank"><button>Solicitar Orçamento</button></a>
             </div>
         </section>
 
         <!-- Empreendimentos -->
+        <!-- Container que engloba título + carrossel/cards + botão Solicitar Orçamento -->
         <section class="servicos">
+            <!-- Título da section -->
             <h1>Empreendimentos</h1>
 
             <!-- Div que engloba os serviços de Empreendimentos -->
-            <div>
+            <div class="carrossel">
                 <!-- Card - Monta Carga 1 -->
                 <div class="card">
                     <!-- Div para englobar a img e o texto oculto -->
@@ -293,17 +312,20 @@
                 </div>
             </div>
 
+            <!-- Botão Solicitar Orçamento -->
             <div class="buttons-inicio">
                 <a href="https://api.whatsapp.com/send?phone=5511956647945&text=Ol%C3%A1,%20gostaria%20de%20solicitar%20um%20or%C3%A7amento!" target="_blank"><button>Solicitar Orçamento</button></a>
             </div>
         </section>
 
         <!-- Manutenção -->
+        <!-- Container que engloba título + carrossel/cards + botão Solicitar Orçamento -->
         <section class="servicos">
+            <!-- Título da section -->
             <h1>Manutenção</h1>
 
             <!-- Div que engloba os serviços de Manutenção -->
-            <div>
+            <div class="carrossel">
                 <!-- Card - Modernização de Elevadores -->
                 <div class="card">
                     <!-- Div para englobar a img e o texto oculto -->
@@ -345,6 +367,7 @@
                 </div>
             </div>
 
+            <!-- Botão Solicitar Orçamento -->
             <div class="buttons-inicio">
                 <a href="https://api.whatsapp.com/send?phone=5511956647945&text=Ol%C3%A1,%20gostaria%20de%20solicitar%20um%20or%C3%A7amento!" target="_blank"><button>Solicitar Orçamento</button></a>
             </div>
