--- a/PAGES/servicos.html
+++ b/PAGES/servicos.html
@@ -23,6 +23,11 @@
     <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.11.3/font/bootstrap-icons.min.css">
 </head>
 <body>
+
+    <!-- Whatsapp Flutuante -->
+    <div class="whatsapp">
+        <a href="https://api.whatsapp.com/send?phone=5511956647945&text=Ol%C3%A1,%20gostaria%20de%20solicitar%20um%20or%C3%A7amento!" target="_blank"><img src="../IMG/whatsapp (4).png" alt="Icone WhatsApp"></a>
+    </div>
     
     <!-- Navbar -->
     <nav class="nav">
