Criação do modal do formulário
- Precisei mexer no base css porque ao tirar o link do btn Solicitar Orçamento que fica na nav o estilo se sumiu;
- Na home, se o user tiver rolado pra baixo do site e clicar na logo que fica na navbar, o user será levado para a parte de cima do site.

--- a/index.html
+++ b/index.html
@@ -26,7 +26,7 @@
     
     <!-- Navbar -->
     <nav class="nav">
-        <a href="index.html" class="logo"><img src="IMG/LOGO-PreventHorizontal.png" alt="Logo Prevent Elevadores"></a>
+        <a href="#inicio" class="logo"><img src="IMG/LOGO-PreventHorizontal.png" alt="Logo Prevent Elevadores"></a>
 
         <button class="hamburguer"></button>
 
@@ -34,12 +34,12 @@
             <li><a href="index.html" class="roxo nav-select">Inicio</a></li>
             <li><a href="PAGES/sobre.html" class="roxo">Sobre Nós</a></li>
             <li><a href="PAGES/servicos.html" class="roxo">Serviços</a></li>
-            <li><a href="https://api.whatsapp.com/send?phone=5511956647945&text=Ol%C3%A1,%20gostaria%20de%20solicitar%20um%20or%C3%A7amento!" target="_blank" class="nav-orç">Solicitar Orçamento</a></li>
+            <li><a href="#contato" class="nav-btnSolicitarOrcamento">Solicitar Orçamento</a></li>
         </ul>
     </nav>
 
     <!-- Inicio -->
-    <header class="inicio">
+    <header class="inicio" id="inicio">
 
         <div class="container-inicio">
             <h1>Segurança em <br>ELEVADORES</h1>
@@ -325,7 +325,7 @@
     <!-- Fim Depoimentos -->
 
     <!-- Fale Conosco! -->
-    <section class="contato">
+    <section class="contato" id="contato">
         <div class="contato-text">
             <h1>Fale Conosco!</h1>
             <p><span>Preencha</span> o <span>formulário</span> e descubra como a Prevent Elevadores pode transformar seu projeto com soluções inovadoras e seguras. <br><br>
