--- a/PAGES/sobre.html
+++ b/PAGES/sobre.html
@@ -16,18 +16,15 @@
     <!-- CSS -->
     <link rel="stylesheet" href="../CSS/base.css">
     <link rel="stylesheet" href="../CSS/sobre.css">
+    <link rel="stylesheet" href="../CSS/servicos.css"> <!-- <--Link necessário por causa do modal -->
     <!-- JS -->
     <script src="../JS/script.js" defer></script>
+    <script src="../JS/modalFormulario.js" defer></script>
     <!-- Bootstrap -->
     <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.11.3/font/bootstrap-icons.min.css">
 </head>
 <body>
 
-    <!-- Whatsapp Flutuante -->
-    <div class="whatsapp">
-        <a href="https://api.whatsapp.com/send?phone=5511956647945&text=Ol%C3%A1,%20gostaria%20de%20solicitar%20um%20or%C3%A7amento!" target="_blank"><img src="../IMG/whatsapp (4).png" alt="Icone WhatsApp"></a>
-    </div>
-    
     <!-- Navbar -->
     <nav class="nav">
         <a href="../index.html" class="logo">
@@ -40,12 +37,17 @@
             <li><a href="../index.html" class="roxo">Inicio</a></li>
             <li><a href="sobre.html" class="roxo nav-select">Sobre Nós</a></li>
             <li><a href="servicos.html" class="roxo">Serviços</a></li>
-            <li><a href="https://api.whatsapp.com/send?phone=5511956647945&text=Ol%C3%A1,%20gostaria%20de%20solicitar%20um%20or%C3%A7amento!" target="_blank" class="nav-orç">Solicitar Orçamento</a></li>
+            <li class="nav-btnSolicitarOrcamento" onclick="mostrarModal()">Solicitar Orçamento</li>
         </ul>
     </nav>
 
     <!-- Main -->
     <main>
+        <!-- Whatsapp Flutuante -->
+        <div class="whatsapp">
+            <a href="https://api.whatsapp.com/send?phone=5511956647945&text=Ol%C3%A1,%20gostaria%20de%20solicitar%20um%20or%C3%A7amento!" target="_blank"><img src="../IMG/whatsapp (4).png" alt="Icone WhatsApp"></a>
+        </div>
+
         <!-- Container que engloba os textos e a img-->
         <section class="container-center">
             <!-- Título + Sobre + Dados -->
@@ -80,6 +82,46 @@
             <!-- Imagem -->
             <img src="../IMG/imgSOBRE/Sobre-Elevador.jpeg" alt="Imagem de um elevador da Prevent">
         </section>
+
+        <!-- Modal do formulário -->
+        <div class="formulario">
+            <form action="">
+                <div class="formulario-input">
+                    <label for="">Seu nome completo*</label>
+                    <input type="text" id="nome" placeholder="Digite seu nome aqui">
+                </div>
+
+                <div class="formulario-input">
+                    <label for="">Seu email*</label>
+                    <input type="text" id="email" placeholder="Digite seu email aqui">
+                </div>
+
+                <div class="formulario-input">
+                    <label for="">Seu telefone*</label>
+                    <input type="text" id="telefone" placeholder="Digite seu telefone aqui">
+                </div>
+
+                <div class="formulario-input">
+                    <label for="">Empresa</label>
+                    <input type="text" id="empresa" placeholder="Digite a empresa aqui">
+                </div>
+                
+                <div class="formulario-input">
+                    <label for="">Equipamento que tem interesse</label>
+                    <input type="text" id="equipamento" placeholder="Digite o equipamento aqui">
+                </div>
+
+                <div class="formulario-input">
+                    <label for="">Cidade </label>
+                    <input type="text" id="cidade" placeholder="Digite a cidade aqui">
+                </div>
+
+                <div class="form-button">
+                    <a href=""><button onclick="enviarParaWhatsApp()">Enviar</button></a>
+                </div>
+                <span onclick="ocultarModal()" >Sair do Formulário</span>
+            </form>
+        </div>
     </main>
 
     <!-- Footer -->
