--- a/PAGES/sobre.html
+++ b/PAGES/sobre.html
@@ -16,7 +16,7 @@
     <!-- CSS -->
     <link rel="stylesheet" href="../CSS/base.css">
     <link rel="stylesheet" href="../CSS/sobre.css">
-    <link rel="stylesheet" href="../CSS/servicos.css"> <!-- <--Link necessário por causa do modal -->
+    <link rel="stylesheet" href="../CSS/modalFormulario.css">
     <!-- JS -->
     <script src="../JS/script.js" defer></script>
     <script src="../JS/modalFormulario.js" defer></script>
