Correções e ajustes em Serviços
- Adicionei a img da Plataforma de Acessibilidade (residenciais) correta;
- Alterei o nome da img Plataforma de Acessibilidade (empreendimento);
- Removi dois arquivos ModernizacaoDeElevadores.jpeg que não serviam e substitui por uma img melhor;
- Arrumei os textos alternativos da img.

--- a/PAGES/servicos.html
+++ b/PAGES/servicos.html
@@ -63,7 +63,7 @@
                 <div class="card">
                     <!-- Div para englobar a img e o texto oculto -->
                     <div class="card-divImg">
-                        <img src="../IMG/imgSERVICOS/PlatHidraulica-Classic.jpeg" class="card-img" alt="Plataforma Hidráulica - New Lift">
+                        <img src="../IMG/imgSERVICOS/PlatHidraulica-Classic.jpeg" class="card-img" alt="Plataforma Hidráulica - Classic">
 
                         <!-- Texto que só irá aparecer se passar o cursor do mouse por cima da img -->
                         <p class="img-textoHover">A plataforma residencial proporciona acessibilidade em casa, permitindo o deslocamento  entre andares.</p>
@@ -86,7 +86,7 @@
                 <div class="card">
                     <!-- Div para englobar a img e o texto oculto -->
                     <div class="card-divImg">
-                        <img src="../IMG/imgSERVICOS/PlatAcessibilidade-MeiaCabine.jpeg" class="card-img" alt="Plataforma de acessibilidade do tipo meia cabine.">
+                        <img src="../IMG/imgSERVICOS/PlatAcessibilidade-Residenciais.jpeg" class="card-img" alt="Plataforma de acessibilidade residencial do tipo meia cabine.">
 
                         <!-- Texto que só irá aparecer se passar o cursor do mouse por cima da img -->
                         <p class="img-textoHover">A plataforma de acessibilidade facilita o deslocamento de pessoas com mobilidade reduzida, garantindo inclusão e segurança.</p>
@@ -132,7 +132,7 @@
                 <div class="card">
                     <!-- Div para englobar a img e o texto oculto -->
                     <div class="card-divImg">
-                        <img src="../IMG/imgSERVICOS/PlatHidraulica-Modern.jpeg" class="card-img" alt="Plataforma Hidráulica - New Lift">
+                        <img src="../IMG/imgSERVICOS/PlatHidraulica-Modern.jpeg" class="card-img" alt="Plataforma Hidráulica - Modern">
 
                         <!-- Texto que só irá aparecer se passar o cursor do mouse por cima da img -->
                         <p class="img-textoHover">A plataforma residencial proporciona acessibilidade em casa, permitindo o deslocamento  entre andares.</p>
@@ -155,7 +155,7 @@
                 <div class="card">
                     <!-- Div para englobar a img e o texto oculto -->
                     <div class="card-divImg">
-                        <img src="../IMG/imgSERVICOS/PlatHidraulica-Basic.jpeg" class="card-img" alt="Plataforma Hidráulica - New Lift">
+                        <img src="../IMG/imgSERVICOS/PlatHidraulica-Basic.jpeg" class="card-img" alt="Plataforma Hidráulica - Basic">
 
                         <!-- Texto que só irá aparecer se passar o cursor do mouse por cima da img -->
                         <p class="img-textoHover">A plataforma residencial proporciona acessibilidade em casa, permitindo o deslocamento  entre andares.</p>
@@ -267,7 +267,7 @@
                 <div class="card">
                     <!-- Div para englobar a img e o texto oculto -->
                     <div class="card-divImg">
-                        <img src="../IMG/imgSERVICOS/MontaCarga-DescDeLixo.jpeg" class="card-img" alt="Monta Carga">
+                        <img src="../IMG/imgSERVICOS/MontaCarga-DescDeLixo.jpeg" class="card-img" alt="Monta Carga - Descarte de lixo">
 
                         <!-- Texto que só irá aparecer se passar o cursor do mouse por cima da img -->
                         <p class="img-textoHover">Esse elevador monta carga é de uso exclusivo para descarte de lixo.</p>
@@ -284,7 +284,7 @@
                 <div class="card">
                     <!-- Div para englobar a img e o texto oculto -->
                     <div class="card-divImg">
-                        <img src="../IMG/imgSERVICOS/PlatAcessibilidade-MeiaCabine.jpeg" class="card-img" alt="Plataforma de acessibilidade do tipo meia cabine.">
+                        <img src="../IMG/imgSERVICOS/PlatAcessibilidade-Empreendimento.jpeg" class="card-img" alt="Plataforma de acessibilidade de empreendimentos">
 
                         <!-- Texto que só irá aparecer se passar o cursor do mouse por cima da img -->
                         <p class="img-textoHover">A plataforma de acessibilidade facilita o deslocamento de pessoas com mobilidade reduzida, garantindo inclusão e segurança.</p>
@@ -304,7 +304,7 @@
                 <div class="card">
                     <!-- Div para englobar a img e o texto oculto -->
                     <div class="card-divImg">
-                        <img src="../IMG/imgSERVICOS/MontaPrato.jpeg" class="card-img" alt="Monta Carga">
+                        <img src="../IMG/imgSERVICOS/MontaPrato.jpeg" class="card-img" alt="Monta Prato">
 
                         <!-- Texto que só irá aparecer se passar o cursor do mouse por cima da img -->
                         <p class="img-textoHover">O elevador monta prato é usado para transportar alimentos entre andares, ideal para restaurantes e cozinhas industriais.</p>
@@ -352,7 +352,7 @@
                 <div class="card">
                     <!-- Div para englobar a img e o texto oculto -->
                     <div class="card-divImg">
-                        <img src="../IMG/imgSERVICOS/ModernizacaoDeElevadores1.jpeg" class="card-img" id="imgModernizacao" alt="Monta Carga">
+                        <img src="../IMG/imgSERVICOS/ModernizacaoDeElevadores.jpeg" class="card-img" id="imgModernizacao" alt="Imagem de Modernização de Elevadores">
 
                         <!-- Texto que só irá aparecer se passar o cursor do mouse por cima da img -->
                         <p class="img-textoHover">A modernização de elevadores melhora desempenho, segurança e estética, trazendo tecnologia e eficiência.</p>
