Alterando os botões
alterando o numero para contato do fomulário

--- a/index.html
+++ b/index.html
@@ -46,7 +46,7 @@
             <p>Há mais de 10 anos proporcionando  soluções.</p>
 
             <div class="buttons-inicio">
-                <a href="https://api.whatsapp.com/send?phone=5511956647945&text=Ol%C3%A1,%20gostaria%20de%20solicitar%20um%20or%C3%A7amento!" target="_blank"><button>Solicitar Orçamento</button></a>
+                <a href="#contato"><button>Solicitar Orçamento</button></a>
             </div>
         </div>
 
@@ -71,7 +71,7 @@
             <p>Somos a Prevent Elevadores e estamos há mais de 10 anos proporcionando soluções como manutenção e fabricação de elevadores, incluindo serviços de instalação, reforma e modernização.</p>
 
             <div class="buttons-inicio">
-                <a href="https://api.whatsapp.com/send?phone=5511956647945&text=Ol%C3%A1,%20gostaria%20de%20solicitar%20um%20or%C3%A7amento!" target="_blank"><button>Saiba Mais</button></a>
+                <a href="#contato"><button>Saiba Mais</button></a>
             </div>
         </div>
 
@@ -242,7 +242,7 @@
         </div>
 
         <div class="buttons-inicio">
-            <a href="https://api.whatsapp.com/send?phone=5511956647945&text=Ol%C3%A1,%20gostaria%20de%20solicitar%20um%20or%C3%A7amento!" target="_blank"><button>Ver Outros Serviços</button></a>
+            <a href="PAGES/servicos.html"><button>Ver Outros Serviços</button></a>
         </div>
     </section>
 
