--- a/index.html
+++ b/index.html
@@ -263,7 +263,6 @@
             <div class="depoimento">
                 <!-- Perfil da pessoa que fez o depoimento -->
                 <div class="perfil-depoimento">
-                    <img class="imagem-depoimento" src="imagens dep/fotoPry.png" alt="Foto de perfil de Pryscilla Regis">
                     <p class="nome-depoimento"> Clinical pet</p>
                     <p class="instagram-depoimento">@clinicalpet24h
                     </p>
@@ -277,7 +276,6 @@
             </div>
             <div class="depoimento">
                 <div class="perfil-depoimento">
-                    <img class="imagem-depoimento" src="images/Logo SBS.png" alt="Foto de perfil de Elaine Lacerda">
                     <p class="nome-depoimento">Colégio Ágape</p>
                     <p class="instagram-depoimento">@colegioagapeinfantil</p>
                 </div>
@@ -285,12 +283,12 @@
             </div>
             <div class="depoimento">
                 <div class="perfil-depoimento">
-                    <img class="imagem-depoimento" src="imagens dep/fotoArt.png" alt="Foto de perfil de Arthur Lima">
                     <p class="nome-depoimento">Sr Carlson</p>
                     <p class="instagram-depoimento"></p>
                 </div>
                 <p class="comentario-depoimento">Até a presente data a empresa prevent Elevadores tem sido eficaz para mim tanto no funcionamento do elevador, como nas manutenções mensais.
             </div>
+            <!--
             <div class="depoimento">
                 <div class="perfil-depoimento">
                     <img class="imagem-depoimento" src="imagens dep/fotoSol.png" alt="Foto de perfil de Solbene">
@@ -319,7 +317,7 @@
                     
                     <br><br>
                     </p>
-            </div>
+            </div> -->
         </div>
     </section>
     <!-- Fim Depoimentos -->
