Adicionando mais um depoimento

--- a/index.html
+++ b/index.html
@@ -4,13 +4,14 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Prevent Elevadores</title>
+    
 
     <!-- META TAG -->
     <meta property="og:type" content="website"/>
-    <meta property="og:title" content="Dally Dally Eventos"/>
-    <meta property="og:image" content="image"/>
-    <meta property="og:description" content="Dally Dally Eventos"/>
-    <meta property="og:site_name" content="Dally Dally Eventos"/>
+    <meta property="og:title" content="Prevent Elevadores"/>
+    <meta property="og:image" content="imagem"/>
+    <meta property="og:description" content="Descrição"/>
+    <meta property="og:site_name" content="Prevent Elevadores"/>
 
     <!-- Link's -->
     <link rel="stylesheet" href="CSS/index.css">
@@ -288,16 +289,17 @@
                 </div>
                 <p class="comentario-depoimento">Até a presente data a empresa prevent Elevadores tem sido eficaz para mim tanto no funcionamento do elevador, como nas manutenções mensais.
             </div>
-            <!--
+
             <div class="depoimento">
                 <div class="perfil-depoimento">
-                    <img class="imagem-depoimento" src="imagens dep/fotoSol.png" alt="Foto de perfil de Solbene">
-                    <p class="nome-depoimento">---</p>
-                    <p class="instagram-depoimento">@---</p>
+                    <p class="nome-depoimento">Sr Auricelio</p>
+                    <p class="instagram-depoimento"></p>
                 </div>
-                <p class="comentario-depoimento">---
+                <p class="comentario-depoimento">O trabalho em relação ao elevador foi bastante gratificante, gostamos demais, só temos a agradecer por tudo, desejo todo sucesso aos seus trabalhos!
                     </p>
             </div>
+            <!--
+
             <div class="depoimento">
                 <div class="perfil-depoimento">
                     <img class="imagem-depoimento" src="images/Logo Eduardo.png" alt="Foto de perfil de Eduardo">
